# GLComputeShaderWrapper

./: .gitmodules  CMakeLists.txt
include/compute_shader/: ComputeShaderBase.hpp  TypeToFormat.hpp
